--- a/sample-libs/Samples.MultiDomainHost.App.FrameworkHttpNoRedirects/Samples.MultiDomainHost.App.FrameworkHttpNoRedirects.csproj
+++ b/sample-libs/Samples.MultiDomainHost.App.FrameworkHttpNoRedirects/Samples.MultiDomainHost.App.FrameworkHttpNoRedirects.csproj
@@ -1,10 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <TargetFrameworks>net452;net461</TargetFrameworks>
+    <TargetFrameworks>net45;net451;net452;net46;net461;net462;net47;net471;net472;net48</TargetFrameworks>
+    <OutputType>Exe</OutputType>
+    <IsPackable>false</IsPackable>
     <LoadManagedProfilerFromProfilerDirectory>true</LoadManagedProfilerFromProfilerDirectory>
   </PropertyGroup>
 
   <ItemGroup>
     <Reference Include="System.Net.Http" />
   </ItemGroup>
+
 </Project>
