--- a/sample-libs/Samples.MultiDomainHost.App.NuGetHttpWithRedirects/Samples.MultiDomainHost.App.NuGetHttpWithRedirects.csproj
+++ b/sample-libs/Samples.MultiDomainHost.App.NuGetHttpWithRedirects/Samples.MultiDomainHost.App.NuGetHttpWithRedirects.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>net45;net451;net452;net46;net461;net462;net47;net471;net472;net48</TargetFrameworks>
+    <OutputType>Exe</OutputType>
     <IsPackable>false</IsPackable>
     <LoadManagedProfilerFromProfilerDirectory>true</LoadManagedProfilerFromProfilerDirectory>
   </PropertyGroup>
