--- a/samples/Samples.Npgsql/Samples.Npgsql.csproj
+++ b/samples/Samples.Npgsql/Samples.Npgsql.csproj
@@ -14,6 +14,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\sample-libs\Samples.DatabaseHelper\Samples.DatabaseHelper.csproj" />
+
+    <!-- this referenced project only targets netstandard2.0 -->
+    <ProjectReference Condition="'$(TargetFramework)' != 'net452'" Include="..\..\sample-libs\Samples.DatabaseHelper.netstandard\Samples.DatabaseHelper.netstandard.csproj" />
   </ItemGroup>
 
 </Project>
