--- a/sample-libs/Samples.DatabaseHelper/Samples.DatabaseHelper.csproj
+++ b/sample-libs/Samples.DatabaseHelper/Samples.DatabaseHelper.csproj
@@ -13,5 +13,8 @@
 
   <ItemGroup Condition="'$(TargetFramework)' != 'net45'">
     <PackageReference Include="Dapper" Version="2.0.30" />
+
+    <!-- this referenced project only targets netstandard2.0 -->
+    <ProjectReference Condition="'$(TargetFramework)' != 'net452'" Include="..\..\sample-libs\Samples.DatabaseHelper.netstandard\Samples.DatabaseHelper.netstandard.csproj" />
   </ItemGroup>
 </Project>
