--- a/sample-libs/Samples.DatabaseHelper/Samples.DatabaseHelper.csproj
+++ b/sample-libs/Samples.DatabaseHelper/Samples.DatabaseHelper.csproj
@@ -15,6 +15,6 @@
     <PackageReference Include="Dapper" Version="2.0.30" />
 
     <!-- this referenced project only targets netstandard2.0 -->
-    <ProjectReference Condition="'$(TargetFramework)' != 'net452'" Include="..\..\sample-libs\Samples.DatabaseHelper.netstandard\Samples.DatabaseHelper.netstandard.csproj" />
+    <ProjectReference Include="..\..\sample-libs\Samples.DatabaseHelper.netstandard\Samples.DatabaseHelper.netstandard.csproj" />
   </ItemGroup>
 </Project>
