--- a/sample-libs/Samples.DatabaseHelper/Samples.DatabaseHelper.csproj
+++ b/sample-libs/Samples.DatabaseHelper/Samples.DatabaseHelper.csproj
@@ -16,5 +16,10 @@
 
     <!-- this referenced project only targets netstandard2.0 -->
     <ProjectReference Include="..\..\sample-libs\Samples.DatabaseHelper.netstandard\Samples.DatabaseHelper.netstandard.csproj" />
+
+    <!-- include this files when targetting net45,
+         otherwise remove them and use the types is defined the referenced project Samples.DatabaseHelper.netstandard -->
+    <Compile Remove="DbCommandExecutor.cs" />
+    <Compile Remove="IDbCommandExecutor.cs" />
   </ItemGroup>
 </Project>
