try to fix C# 8 again

--- a/sample-libs/Directory.Build.props
+++ b/sample-libs/Directory.Build.props
@@ -1,6 +1,8 @@
 <Project>
   <!--
-  This file intentionally left blank...
-  to stop msbuild from looking up the folder hierarchy
+  NOTE: The presence of this file stops msbuild from looking up the folder hierarchy
   -->
+  <PropertyGroup>
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
 </Project>
