--- a/sample-libs/Samples.DatabaseHelper.netstandard/Samples.DatabaseHelper.netstandard.csproj
+++ b/sample-libs/Samples.DatabaseHelper.netstandard/Samples.DatabaseHelper.netstandard.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Samples.DatabaseHelper</RootNamespace>
+
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
