--- a/samples/Samples.Npgsql/Samples.Npgsql.csproj
+++ b/samples/Samples.Npgsql/Samples.Npgsql.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <ApiVersion Condition="'$(ApiVersion)' == ''">4.0.4</ApiVersion>
+    <ApiVersion Condition="'$(ApiVersion)' == ''">4.0.10</ApiVersion>
 
     <!-- Required to build multiple projects with the same Configuration|Platform -->
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -14,6 +14,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\sample-libs\Samples.DatabaseHelper\Samples.DatabaseHelper.csproj" />
+
+    <!-- this referenced project only targets netstandard2.0 -->
+    <ProjectReference Condition="'$(TargetFramework)' != 'net452'" Include="..\..\sample-libs\Samples.DatabaseHelper.netstandard\Samples.DatabaseHelper.netstandard.csproj" />
   </ItemGroup>
 
 </Project>
