--- a/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
+++ b/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
@@ -7,7 +7,7 @@
     <OutputPath>..\bin\ProfilerResources\</OutputPath>
 
     <!-- NuGet -->
-    <Version>1.18.3</Version>
+    <Version>1.18.4-prerelease</Version>
   </PropertyGroup>
 
 </Project>
