--- a/samples/Samples.WebRequest/Properties/launchSettings.json
+++ b/samples/Samples.WebRequest/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
     "profiles": {
-      "Samples.WebClientDriver": {
+      "Samples.WebRequest": {
         "commandName": "Project",
         "environmentVariables": {
           "COR_ENABLE_PROFILING": "1",
