--- a/samples/Samples.HttpMessageHandler/Properties/launchSettings.json
+++ b/samples/Samples.HttpMessageHandler/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
     "profiles": {
-      "Samples.HttpClientDriver": {
+      "Samples.HttpMessageHandler": {
         "commandName": "Project",
         "environmentVariables": {
           "COR_ENABLE_PROFILING": "1",
