msbuild logger integration (#811)
* MsBuild integration by using a logger implementation.
* Writes the msbuild errors and warning as a json string to be collected with the CI instrumentation.

--- a/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
+++ b/src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
@@ -50,4 +50,8 @@ Users who need manual instrumentation should reference the "Datadog.Trace" packa
 
   <Import Project="..\Datadog.Trace.Ci.Shared\Datadog.Trace.Ci.Shared.projitems" Label="Shared" />
 
+  <ItemGroup>
+    <!-- Include Datadog.Trace.Build assembly as a reference for publishing purposes -->
+    <ProjectReference Include="..\Datadog.Trace.MSBuild\Datadog.Trace.MSBuild.csproj" PrivateAssets="all" />
+  </ItemGroup>
 </Project>
