--- a/.azure-pipelines/unit-tests-experimental.yml
+++ b/.azure-pipelines/unit-tests-experimental.yml
@@ -2,6 +2,12 @@ trigger:
   branches:
     include:
       - '*'
+    exclude:
+      - refs/pull/*/head
+  paths:
+    exclude:
+      - docs/*
+      - .github/*
 
 variables:
   buildConfiguration: Debug
