--- a/samples/Samples.WebRequest/Properties/launchSettings.json
+++ b/samples/Samples.WebRequest/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
     "profiles": {
-      "Samples.HttpMessageHandler": {
+      "Samples.WebRequest": {
         "commandName": "Project",
         "environmentVariables": {
           "COR_ENABLE_PROFILING": "1",
@@ -10,12 +10,9 @@
           "CORECLR_ENABLE_PROFILING": "1",
           "CORECLR_PROFILER": "{846F5F1C-F9AE-4B07-969E-05C26BC060D8}",
           "CORECLR_PROFILER_PATH": "$(ProjectDir)$(OutputPath)profiler-lib\\Datadog.Trace.ClrProfiler.Native.dll",
-
+  
           "DD_DOTNET_TRACER_HOME": "$(ProjectDir)$(OutputPath)profiler-lib",
-          "DD_INTEGRATIONS": "$(ProjectDir)$(OutputPath)profiler-lib\\integrations.json",
-          "DD_VERSION": "1.0.0",
-
-          "DD_HttpSocketsHandler_ENABLED": "true",
+          "DD_INTEGRATIONS": "$(ProjectDir)$(OutputPath)profiler-lib\\integrations.json"
         },
         "nativeDebugging": true
       }
