--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -12,18 +12,36 @@ trigger:
 variables:
   buildConfiguration: Debug
   dotnetCoreSdkVersion: 3.1.107
+  ddApiKey: $(DD_API_KEY)
 
 jobs:
 
 - job: managed
+
+  resources:
+    containers:
+    - container: dd_agent
+      image: datadog/agent:latest
+      ports:
+      - 8126:8126
+      env:
+      - DD_API_KEY=$(ddApiKey)
+      - DD_HOSTNAME=none
+      - DD_APM_ENABLED=true
+      - DD_APM_NON_LOCAL_TRAFFIC=true
+
   strategy:
     matrix:
       windows:
         imageName: windows-2019
       linux:
         imageName: ubuntu-18.04
+
   pool:
     vmImage: $(imageName)
+
+  services:
+    dd_agent: dd_agent
 
   steps:
   - task: UseDotNet@2
