--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -13,6 +13,9 @@ variables:
   buildConfiguration: Debug
   dotnetCoreSdkVersion: 3.1.107
   ddApiKey: $(DD_API_KEY)
+  releasesUrl: https://github.com/DataDog/dd-trace-dotnet/releases/download/
+  releaseVersion: 1.19.1
+
 
 resources:
   containers:
@@ -44,6 +47,9 @@ jobs:
     dd_agent: dd_agent
 
   steps:
+  - pwsh: echo "$($env:releasesUrl)v$($env:releaseVersion)/windows-tracer-home.zip"
+  - pwsh: echo "$($env:releasesUrl)v$($env:releaseVersion)/datadog-dotnet-apm-$($env:version).tar.gz"
+
   - task: UseDotNet@2
     displayName: install dotnet core runtime 2.1
     inputs:
