--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -50,7 +50,7 @@ jobs:
   - pwsh: |
       echo "Downloading tracer binaries..."
       $windows_url = "$($env:releasesUrl)v$($env:releaseVersion)/windows-tracer-home.zip"
-      $linux_url = "$($env:releasesUrl)v$($env:releaseVersion)/datadog-dotnet-apm-$($env:version).tar.gz"
+      $linux_url = "$($env:releasesUrl)v$($env:releaseVersion)/datadog-dotnet-apm-$($env:releaseVersion).tar.gz"
       echo $windows_url
       Invoke-WebRequest -Uri $windows_url -OutFile windows.zip
       echo $linux_url
