Initial integration-tests pipeline modification

--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -23,12 +23,38 @@ variables:
   buildConfiguration: Debug
   publishOutput: $(System.DefaultWorkingDirectory)/src/bin/managed-publish
   dotnetCoreSdkVersion: 3.1.107
+  ddApiKey: $(DD_API_KEY)
+  DD_DOTNET_TRACER_MSBUILD:
+
+# Declare the datadog agent as a resource to be used as a pipeline service
+resources:
+  containers:
+  - container: dd_agent
+    image: datadog/agent:latest
+    ports:
+    - 8126:8126
+    env:
+      DD_API_KEY: $(ddApiKey)
+      DD_HOSTNAME: none
+      DD_APM_ENABLED: true
+      DD_APM_NON_LOCAL_TRAFFIC: true
 
 jobs:
 
 - job: build_linux_profiler
 
+  # Enable the Datadog Agent service for this job
+  services:
+    dd_agent: dd_agent
+
+  # Install the tracer latest stable release to attach the profiler to the build and test steps.
+  # The script exposes the required environment variables to the following steps
   steps:
+  - task: PowerShell@2
+    displayName: Install profiler latest release
+    inputs:
+      filePath: ./docker/install_lastrelease.ps1
+
   - task: UseDotNet@2
     displayName: install dotnet core sdk 3.1
     inputs:
@@ -39,7 +65,9 @@ jobs:
     inputs:
       command: build
       projects: src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
-      arguments: --configuration $(buildConfiguration)
+      arguments: --configuration $(buildConfiguration) -l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
+    env:
+      DD_SERVICE_NAME: $(System.JobName)-dd-tracer-dotnet-loader
 
   - task: DotNetCoreCLI@2
     displayName: dotnet publish Datadog.Trace.ClrProfiler.Managed
@@ -49,13 +77,17 @@ jobs:
       modifyOutputPath: false
       zipAfterPublish: false
       projects: src/Datadog.Trace.ClrProfiler.Managed/Datadog.Trace.ClrProfiler.Managed.csproj
-      arguments: --configuration $(buildConfiguration) --framework netstandard2.0 --output $(publishOutput)/netstandard2.0
+      arguments: --configuration $(buildConfiguration) --framework netstandard2.0 --output $(publishOutput)/netstandard2.0  -l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
+    env:
+      DD_SERVICE_NAME: $(System.JobName)-dd-tracer-dotnet-publish
 
   - task: DockerCompose@0
     displayName: docker-compose run Profiler
     inputs:
       containerregistrytype: Container Registry
       dockerComposeCommand: run Profiler
+    env:
+      DD_SERVICE_NAME: $(System.JobName)-dd-tracer-dotnet
 
   - publish: $(System.DefaultWorkingDirectory)/src/Datadog.Trace.ClrProfiler.Native/bin/$(buildConfiguration)/x64
     artifact: linux-tracer-home
