changes integration-tests pipelines

--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -105,7 +105,20 @@ jobs:
   variables:
     TestAllPackageVersions: true
 
+  # Enable the Datadog Agent service for this job
+  services:
+    dd_agent: dd_agent
+
+  # Install the tracer latest stable release to attach the profiler to the build and test steps.
+  # The script exposes the required environment variables to the following steps
   steps:
+  - task: PowerShell@2
+    displayName: Install profiler latest release
+    inputs:
+      filePath: ./docker/install_lastrelease.ps1
+    env:
+      DD_TRACER_WORKINGFOLDER:/project
+
   - download: current
     artifact: linux-tracer-home
 
